<resources>
    <string name="app_name">Safe Paths</string>

    <!-- Login -->
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="singin">Iniciar Sesión</string>
    <string name="registrate">¿Aún no estás registrado?</string>
    <string name="registrate2">¡Regístrate aquí!</string>
    <string name="registrateGratis">Registrate gratis!</string>
    <string name="please_register">Registrese por favor!!</string>
    <string name="error_autenticate">Error de Autenticación!</string>
    <string name="autenticate">Autenticando ....</string>

    <!-- Anadir zona nueva -->
    <string name="nivel">Nivel de Inseguridad</string>
    <string name="radio">Radio</string>
    <string name="comentarios">Comentarios</string>

    <!-- Destino -->
    <string name="ruta">Ruta segura</string>

    <!--Registro-->
    <string name="prompt_name">Nombres</string>
    <string name="prompt_surname">Apellidos</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña </string>
    <string name="action_sign_in">Regístrate</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Correo electrónico inválido </string>
    <string name="error_invalid_password">Contraseña muyr corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions..."</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="error_register">Error al Registrar!</string>
    <string name="email_already_exist">Este correo ya existe!</string>
    <string name="data_correct">Datos ingresados correctamente</string>
    <string name="load_register">Registrandose ...</string>
    <string name="succes_register">Se registro correctamente!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--Navigation Drawer-->
    <string name="prompt_account">Mi cuenta</string>
    <string name="prompt_paths">Mis rutas</string>
    <string name="prompt_qualification">Mis calificaciones</string>
    <string name="prompt_option">Opciones </string>
    <string name="prompt_setting">Configuración</string>
    <string name="prompt_condiciones">Términos y Condiciones</string>
    <string name="prompt_info">Acerca de Safe Paths</string>
    <string name="title_activity_general_map">Map</string>
    <string name="title_activity_paths">Map</string>
    <string name="title_activity_add_zone">Map</string>
    <!--addZone-->
    <string name="color_bajo">#FFF9C4</string>
    <string name="color_medio">#FFE0B2</string>
    <string name="color_alto">#FFCDD2</string>

    <string name="color_bajo_sel">#FFC107</string>
    <string name="color_medio_sel">#E65100</string>
    <string name="color_alto_sel">#F44336</string>
    <string name="title_activity_add_zona">Map</string>
    <string name="add_zona">Zona a añadir</string>

    <!--Inicio-->
    <string name="cargar_zona">Cargando zonas</string>
    <string name="fallo_cargar">Error al cargar zonas</string>
    <string name="carga_exitosa">Carga exitosa</string>


</resources>
